[artf486409] validate popup alignment issue fixed

--- a/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
+++ b/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
@@ -3969,6 +3969,31 @@ form div.error {
 /** performance test popup styles ends **/
 
 /** validate popup **/
+
+.validate-container {
+  	width: 100%;
+  	height: 91%;
+  	margin: -1px auto;
+  	position: relative;
+  	padding-top: 30px;
+  	border-radius: 6px; 
+}
+
+.validate-container-inner {
+ 	overflow-x: visible;
+ 	overflow-y: auto;
+ 	height: 100%;
+}
+  
+.th-inner-validate {
+  	position: absolute;
+  	top: 2px;
+  	line-height: 30px;
+  	text-align: left;
+  	padding-left: 5px;
+  	margin-left: -5px;
+}
+
 .validate_Modal {
 	margin-top: -200px;
 	height: 50%;
